move annotate_paint.c

--- a/source/blender/editors/gpencil_legacy/CMakeLists.txt
+++ b/source/blender/editors/gpencil_legacy/CMakeLists.txt
@@ -21,7 +21,7 @@ set(INC_SYS
 
 set(SRC
   annotate_draw.cc
-  annotate_paint.c
+  annotate_paint.cc
   drawgpencil.c
   editaction_gpencil.c
   gpencil_add_blank.c
