--- a/source/blender/editors/gizmo_library/CMakeLists.txt
+++ b/source/blender/editors/gizmo_library/CMakeLists.txt
@@ -25,7 +25,7 @@ set(SRC
   gizmo_library_intern.h
   gizmo_library_presets.c
   gizmo_library_utils.c
-  geometry/geom_arrow_gizmo.c
+  geometry/geom_arrow_gizmo.cc
   geometry/geom_cube_gizmo.c
   geometry/geom_dial_gizmo.c
   gizmo_types/arrow3d_gizmo.c
