move geom_dial_gizmo.c

--- a/source/blender/editors/gizmo_library/CMakeLists.txt
+++ b/source/blender/editors/gizmo_library/CMakeLists.txt
@@ -27,7 +27,7 @@ set(SRC
   gizmo_library_utils.c
   geometry/geom_arrow_gizmo.cc
   geometry/geom_cube_gizmo.cc
-  geometry/geom_dial_gizmo.c
+  geometry/geom_dial_gizmo.cc
   gizmo_types/arrow3d_gizmo.c
   gizmo_types/blank3d_gizmo.c
   gizmo_types/button2d_gizmo.c
