--- a/source/blender/editors/gizmo_library/CMakeLists.txt
+++ b/source/blender/editors/gizmo_library/CMakeLists.txt
@@ -31,7 +31,7 @@ set(SRC
   gizmo_types/arrow3d_gizmo.cc
   gizmo_types/blank3d_gizmo.cc
   gizmo_types/button2d_gizmo.cc
-  gizmo_types/cage2d_gizmo.c
+  gizmo_types/cage2d_gizmo.cc
   gizmo_types/cage3d_gizmo.c
   gizmo_types/dial3d_gizmo.c
   gizmo_types/move3d_gizmo.c
