move snap3d_gizmo.c

--- a/source/blender/editors/gizmo_library/CMakeLists.txt
+++ b/source/blender/editors/gizmo_library/CMakeLists.txt
@@ -36,7 +36,7 @@ set(SRC
   gizmo_types/dial3d_gizmo.cc
   gizmo_types/move3d_gizmo.cc
   gizmo_types/primitive3d_gizmo.cc
-  gizmo_types/snap3d_gizmo.c
+  gizmo_types/snap3d_gizmo.cc
 )
 
 set(LIB
