move blf_glyph.c

--- a/source/blender/blenfont/CMakeLists.txt
+++ b/source/blender/blenfont/CMakeLists.txt
@@ -20,7 +20,7 @@ set(SRC
   intern/blf_dir.cc
   intern/blf_font.cc
   intern/blf_font_default.cc
-  intern/blf_glyph.c
+  intern/blf_glyph.cc
   intern/blf_thumbs.c
   intern/blf_util.c
 
