move implicit_blender.c

--- a/source/blender/simulation/CMakeLists.txt
+++ b/source/blender/simulation/CMakeLists.txt
@@ -19,7 +19,7 @@ set(INC_SYS
 set(SRC
   intern/SIM_mass_spring.cpp
   intern/hair_volume.cc
-  intern/implicit_blender.c
+  intern/implicit_blender.cc
   intern/implicit_eigen.cpp
 
   intern/ConstrainedConjugateGradient.h
