--- a/source/blender/shader_fx/CMakeLists.txt
+++ b/source/blender/shader_fx/CMakeLists.txt
@@ -29,7 +29,7 @@ set(SRC
   intern/FX_shader_blur.cc
   intern/FX_shader_colorize.cc
   intern/FX_shader_flip.cc
-  intern/FX_shader_glow.c
+  intern/FX_shader_glow.cc
   intern/FX_shader_pixel.c
   intern/FX_shader_rim.c
   intern/FX_shader_shadow.c
