--- a/source/blender/shader_fx/CMakeLists.txt
+++ b/source/blender/shader_fx/CMakeLists.txt
@@ -32,7 +32,7 @@ set(SRC
   intern/FX_shader_glow.cc
   intern/FX_shader_pixel.cc
   intern/FX_shader_rim.cc
-  intern/FX_shader_shadow.c
+  intern/FX_shader_shadow.cc
   intern/FX_shader_swirl.c
   intern/FX_shader_util.c
   intern/FX_shader_wave.c
