move FX_ui_common.c

--- a/source/blender/shader_fx/CMakeLists.txt
+++ b/source/blender/shader_fx/CMakeLists.txt
@@ -24,7 +24,7 @@ set(INC_SYS
 
 set(SRC
   intern/FX_shader_util.h
-  intern/FX_ui_common.c
+  intern/FX_ui_common.cc
 
   intern/FX_shader_blur.cc
   intern/FX_shader_colorize.cc
