--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -31,7 +31,7 @@ set(INC
 
 set(SRC
   intern/wm.c
-  intern/wm_cursors.c
+  intern/wm_cursors.cc
   intern/wm_dragdrop.cc
   intern/wm_draw.c
   intern/wm_event_query.c
