--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -33,7 +33,7 @@ set(SRC
   intern/wm.c
   intern/wm_cursors.cc
   intern/wm_dragdrop.cc
-  intern/wm_draw.c
+  intern/wm_draw.cc
   intern/wm_event_query.c
   intern/wm_event_system.cc
   intern/wm_files.cc
