--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -37,7 +37,7 @@ set(SRC
   intern/wm_event_query.cc
   intern/wm_event_system.cc
   intern/wm_files.cc
-  intern/wm_files_link.c
+  intern/wm_files_link.cc
   intern/wm_gesture.c
   intern/wm_gesture_ops.c
   intern/wm_init_exit.cc
