move wm_gesture.c

--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -38,7 +38,7 @@ set(SRC
   intern/wm_event_system.cc
   intern/wm_files.cc
   intern/wm_files_link.cc
-  intern/wm_gesture.c
+  intern/wm_gesture.cc
   intern/wm_gesture_ops.cc
   intern/wm_init_exit.cc
   intern/wm_jobs.c
