--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -45,7 +45,7 @@ set(SRC
   intern/wm_keymap.cc
   intern/wm_keymap_utils.cc
   intern/wm_menu_type.cc
-  intern/wm_operator_props.c
+  intern/wm_operator_props.cc
   intern/wm_operator_type.c
   intern/wm_operator_utils.c
   intern/wm_operators.c
