--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -46,7 +46,7 @@ set(SRC
   intern/wm_keymap_utils.cc
   intern/wm_menu_type.cc
   intern/wm_operator_props.cc
-  intern/wm_operator_type.c
+  intern/wm_operator_type.cc
   intern/wm_operator_utils.c
   intern/wm_operators.c
   intern/wm_panel_type.c
