move wm_panel_type.c

--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -49,7 +49,7 @@ set(SRC
   intern/wm_operator_type.cc
   intern/wm_operator_utils.cc
   intern/wm_operators.cc
-  intern/wm_panel_type.c
+  intern/wm_panel_type.cc
   intern/wm_platform_support.c
   intern/wm_playanim.c
   intern/wm_splash_screen.c
