--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -52,7 +52,7 @@ set(SRC
   intern/wm_panel_type.cc
   intern/wm_platform_support.cc
   intern/wm_playanim.cc
-  intern/wm_splash_screen.c
+  intern/wm_splash_screen.cc
   intern/wm_stereo.c
   intern/wm_subwindow.c
   intern/wm_surface.c
