move wm_stereo.c

--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -53,7 +53,7 @@ set(SRC
   intern/wm_platform_support.cc
   intern/wm_playanim.cc
   intern/wm_splash_screen.cc
-  intern/wm_stereo.c
+  intern/wm_stereo.cc
   intern/wm_subwindow.c
   intern/wm_surface.c
   intern/wm_toolsystem.c
