move wm_surface.c

--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -55,7 +55,7 @@ set(SRC
   intern/wm_splash_screen.cc
   intern/wm_stereo.cc
   intern/wm_subwindow.cc
-  intern/wm_surface.c
+  intern/wm_surface.cc
   intern/wm_toolsystem.c
   intern/wm_tooltip.c
   intern/wm_uilist_type.c
