--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -68,7 +68,7 @@ set(SRC
   gizmo/intern/wm_gizmo_target_props.cc
   gizmo/intern/wm_gizmo_type.cc
   message_bus/intern/wm_message_bus.c
-  message_bus/intern/wm_message_bus_rna.c
+  message_bus/intern/wm_message_bus_rna.cc
   message_bus/intern/wm_message_bus_static.c
 
   WM_api.h
