--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -194,7 +194,7 @@ if(WITH_XR_OPENXR)
   list(APPEND SRC
     xr/intern/wm_xr.c
     xr/intern/wm_xr_action.cc
-    xr/intern/wm_xr_actionmap.c
+    xr/intern/wm_xr_actionmap.cc
     xr/intern/wm_xr_draw.c
     xr/intern/wm_xr_operators.c
     xr/intern/wm_xr_session.c
