--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -195,7 +195,7 @@ if(WITH_XR_OPENXR)
     xr/intern/wm_xr.c
     xr/intern/wm_xr_action.cc
     xr/intern/wm_xr_actionmap.cc
-    xr/intern/wm_xr_draw.c
+    xr/intern/wm_xr_draw.cc
     xr/intern/wm_xr_operators.c
     xr/intern/wm_xr_session.c
 
