--- a/source/blender/windowmanager/CMakeLists.txt
+++ b/source/blender/windowmanager/CMakeLists.txt
@@ -192,7 +192,7 @@ if(WITH_XR_OPENXR)
   )
 
   list(APPEND SRC
-    xr/intern/wm_xr.c
+    xr/intern/wm_xr.cc
     xr/intern/wm_xr_action.cc
     xr/intern/wm_xr_actionmap.cc
     xr/intern/wm_xr_draw.cc
