move bpy_app_ffmpeg.c

--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -29,7 +29,7 @@ set(SRC
   bpy_app.c
   bpy_app_alembic.cc
   bpy_app_build_options.cc
-  bpy_app_ffmpeg.c
+  bpy_app_ffmpeg.cc
   bpy_app_handlers.c
   bpy_app_icons.c
   bpy_app_ocio.c
