--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -33,7 +33,7 @@ set(SRC
   bpy_app_handlers.cc
   bpy_app_icons.cc
   bpy_app_ocio.cc
-  bpy_app_oiio.c
+  bpy_app_oiio.cc
   bpy_app_opensubdiv.c
   bpy_app_openvdb.c
   bpy_app_sdl.c
