moev bpy_app_openvdb.c

--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -35,7 +35,7 @@ set(SRC
   bpy_app_ocio.cc
   bpy_app_oiio.cc
   bpy_app_opensubdiv.cc
-  bpy_app_openvdb.c
+  bpy_app_openvdb.cc
   bpy_app_sdl.c
   bpy_app_timers.c
   bpy_app_translations.c
