move bpy_app_sdl.c

--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -36,7 +36,7 @@ set(SRC
   bpy_app_oiio.cc
   bpy_app_opensubdiv.cc
   bpy_app_openvdb.cc
-  bpy_app_sdl.c
+  bpy_app_sdl.cc
   bpy_app_timers.c
   bpy_app_translations.c
   bpy_app_usd.c
