--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -37,7 +37,7 @@ set(SRC
   bpy_app_opensubdiv.cc
   bpy_app_openvdb.cc
   bpy_app_sdl.cc
-  bpy_app_timers.c
+  bpy_app_timers.cc
   bpy_app_translations.c
   bpy_app_usd.c
   bpy_capi_utils.c
