move bpy_app_usd.c

--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -39,7 +39,7 @@ set(SRC
   bpy_app_sdl.cc
   bpy_app_timers.cc
   bpy_app_translations.cc
-  bpy_app_usd.c
+  bpy_app_usd.cc
   bpy_capi_utils.c
   bpy_driver.c
   bpy_gizmo_wrap.c
