--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -46,7 +46,7 @@ set(SRC
   bpy_interface.cc
   bpy_interface_atexit.cc
   bpy_interface_run.cc
-  bpy_intern_string.c
+  bpy_intern_string.cc
   bpy_library_load.c
   bpy_library_write.c
   bpy_msgbus.c
