--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -51,7 +51,7 @@ set(SRC
   bpy_library_write.cc
   bpy_msgbus.cc
   bpy_operator.c
-  bpy_operator_wrap.c
+  bpy_operator_wrap.cc
   bpy_path.c
   bpy_props.c
   bpy_rna.c
