move bpy_operator.c

--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -50,7 +50,7 @@ set(SRC
   bpy_library_load.cc
   bpy_library_write.cc
   bpy_msgbus.cc
-  bpy_operator.c
+  bpy_operator.cc
   bpy_operator_wrap.cc
   bpy_path.c
   bpy_props.c
