move bpy_rna_text.c

--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -64,7 +64,7 @@ set(SRC
   bpy_rna_gizmo.cc
   bpy_rna_id_collection.cc
   bpy_rna_operator.cc
-  bpy_rna_text.c
+  bpy_rna_text.cc
   bpy_rna_types_capi.c
   bpy_rna_ui.c
   bpy_traceback.c
