--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -67,7 +67,7 @@ set(SRC
   bpy_rna_text.cc
   bpy_rna_types_capi.cc
   bpy_rna_ui.cc
-  bpy_traceback.c
+  bpy_traceback.cc
   bpy_utils_previews.c
   bpy_utils_units.c
   stubs.c
