Make DomeLight visible for Storm delegate
### Purpose
Make world color and texture visible for Storm delegate.

### Technical steps
- Implemented LightTasksDelegate.
- Updates CMakeLists.txt with light_tasks_delegate.h, light_tasks_delegate.cc.
- Appended HdTaskSharedPtrVector with light_tasks_delegate_.

Pull Request https://projects.blender.org/BogdanNagirniak/blender/pulls/68

--- a/source/blender/render/hydra/CMakeLists.txt
+++ b/source/blender/render/hydra/CMakeLists.txt
@@ -88,8 +88,8 @@ set(SRC
 
   render_task_delegate.cc
   render_task_delegate.h
-  simple_light_task_delegate.cc
-  simple_light_task_delegate.h
+  light_tasks_delegate.cc
+  light_tasks_delegate.h
 
   scene_delegate/blender_scene_delegate.cc
   scene_delegate/blender_scene_delegate.h
