--- a/source/blender/blenkernel/CMakeLists.txt
+++ b/source/blender/blenkernel/CMakeLists.txt
@@ -72,7 +72,7 @@ set(SRC
   intern/attribute_access.cc
   intern/attribute_math.cc
   intern/autoexec.cc
-  intern/bake_geometry_nodes.cc
+  intern/bake_items.cc
   intern/blender.cc
   intern/blender_copybuffer.cc
   intern/blender_undo.cc
@@ -329,6 +329,7 @@ set(SRC
   BKE_autoexec.h
   BKE_bake_geometry_nodes.hh
   BKE_bake_items.hh
+  BKE_bake_items_serialize.hh
   BKE_blender.h
   BKE_blender_copybuffer.h
   BKE_blender_undo.h
