move bmesh_py_api.c

--- a/source/blender/python/bmesh/CMakeLists.txt
+++ b/source/blender/python/bmesh/CMakeLists.txt
@@ -13,7 +13,7 @@ set(INC_SYS
 
 set(SRC
   bmesh_py_api.cc
-  bmesh_py_geometry.c
+  bmesh_py_geometry.cc
   bmesh_py_ops.c
   bmesh_py_ops_call.c
   bmesh_py_types.c
