--- a/source/blender/python/bmesh/CMakeLists.txt
+++ b/source/blender/python/bmesh/CMakeLists.txt
@@ -14,7 +14,7 @@ set(INC_SYS
 set(SRC
   bmesh_py_api.cc
   bmesh_py_geometry.cc
-  bmesh_py_ops.c
+  bmesh_py_ops.cc
   bmesh_py_ops_call.cc
   bmesh_py_types.c
   bmesh_py_types_customdata.c
