--- a/source/blender/python/generic/CMakeLists.txt
+++ b/source/blender/python/generic/CMakeLists.txt
@@ -19,7 +19,7 @@ set(SRC
   bl_math_py_api.cc
   blf_py_api.cc
   bpy_threads.cc
-  idprop_py_api.c
+  idprop_py_api.cc
   idprop_py_ui_api.c
   imbuf_py_api.c
   py_capi_rna.c
