--- a/source/blender/python/generic/CMakeLists.txt
+++ b/source/blender/python/generic/CMakeLists.txt
@@ -22,7 +22,7 @@ set(SRC
   idprop_py_api.cc
   idprop_py_ui_api.cc
   imbuf_py_api.cc
-  py_capi_rna.c
+  py_capi_rna.cc
   py_capi_utils.c
 
   bgl.h
