move gpu_py_batch.c

--- a/source/blender/python/gpu/CMakeLists.txt
+++ b/source/blender/python/gpu/CMakeLists.txt
@@ -17,7 +17,7 @@ set(INC_SYS
 set(SRC
   gpu_py.c
   gpu_py_api.cc
-  gpu_py_batch.c
+  gpu_py_batch.cc
   gpu_py_buffer.c
   gpu_py_capabilities.c
   gpu_py_element.c
