--- a/source/blender/python/gpu/CMakeLists.txt
+++ b/source/blender/python/gpu/CMakeLists.txt
@@ -23,7 +23,7 @@ set(SRC
   gpu_py_element.cc
   gpu_py_framebuffer.cc
   gpu_py_matrix.cc
-  gpu_py_offscreen.c
+  gpu_py_offscreen.cc
   gpu_py_platform.c
   gpu_py_select.c
   gpu_py_shader.c
