--- a/source/blender/python/gpu/CMakeLists.txt
+++ b/source/blender/python/gpu/CMakeLists.txt
@@ -26,7 +26,7 @@ set(SRC
   gpu_py_offscreen.cc
   gpu_py_platform.cc
   gpu_py_select.cc
-  gpu_py_shader.c
+  gpu_py_shader.cc
   gpu_py_shader_create_info.cc
   gpu_py_state.c
   gpu_py_texture.c
