--- a/source/blender/python/gpu/CMakeLists.txt
+++ b/source/blender/python/gpu/CMakeLists.txt
@@ -33,7 +33,7 @@ set(SRC
   gpu_py_types.cc
   gpu_py_uniformbuffer.cc
   gpu_py_vertex_buffer.cc
-  gpu_py_vertex_format.c
+  gpu_py_vertex_format.cc
 
   gpu_py.h
   gpu_py_api.h
