--- a/source/blender/makesrna/intern/CMakeLists.txt
+++ b/source/blender/makesrna/intern/CMakeLists.txt
@@ -12,9 +12,9 @@ if(HAVE_MALLOC_STATS_H)
   add_definitions(-DHAVE_MALLOC_STATS_H)
 endif()
 
-# files rna_access.cc rna_define.c makesrna.c intentionally excluded.
+# files rna_access.cc rna_define.cc makesrna.c intentionally excluded.
 set(DEFSRC
-  rna_ID.c
+  rna_ID.cc
   rna_action.cc
   rna_animation.cc
   rna_animviz.cc
@@ -199,7 +199,7 @@ set(SRC_RNA_INC
 
 set(SRC
   makesrna.c
-  rna_define.c
+  rna_define.cc
   ${DEFSRC}
   ${APISRC}
   ../../../../intern/clog/clog.c
@@ -490,4 +490,3 @@ set(LIB
 )
 
 blender_add_lib(bf_rna "${SRC}" "${INC}" "${INC_SYS}" "${LIB}")
-
