Don't duplicate blend files

--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -691,13 +691,27 @@ if(WITH_COMPOSITOR_CPU)
     foreach(comp_test ${compositor_tests})
       add_python_test(
         compositor_${comp_test}_cpu_test
-        ${CMAKE_CURRENT_LIST_DIR}/compositor_render_tests.py
+        ${CMAKE_CURRENT_LIST_DIR}/compositor_cpu_render_tests.py
         -blender "${TEST_BLENDER_EXE}"
         -testdir "${TEST_SRC_DIR}/compositor_cpu/${comp_test}"
         -idiff "${OPENIMAGEIO_IDIFF}"
         -outdir "${TEST_OUT_DIR}/compositor_cpu"
       )
     endforeach()
+
+    if(WITH_COMPOSITOR_REALTIME_TEST)
+      foreach(comp_test ${compositor_tests})
+        add_python_test(
+          compositor_${comp_test}_realtime_test
+          ${CMAKE_CURRENT_LIST_DIR}/compositor_realtime_render_tests.py
+          -blender "${TEST_BLENDER_EXE}"
+          -testdir "${TEST_SRC_DIR}/compositor/${comp_test}"
+          -idiff "${OPENIMAGEIO_IDIFF}"
+          -outdir "${TEST_OUT_DIR}/compositor_realtime"
+        )
+      endforeach()
+    endif()
+
   endif()
 endif()
 
