--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -269,6 +269,8 @@ option(WITH_OPENVDB       "Enable features relying on OpenVDB" ON)
 option(WITH_OPENVDB_BLOSC "Enable blosc compression for OpenVDB, only enable if OpenVDB was built with blosc support" ON)
 option(WITH_OPENVDB_3_ABI_COMPATIBLE "Assume OpenVDB library has been compiled with version 3 ABI compatibility" OFF)
 mark_as_advanced(WITH_OPENVDB_3_ABI_COMPATIBLE)
+option(WITH_OPENVDB_4_ABI_COMPATIBLE "Assume OpenVDB library has been compiled with version 4 ABI compatibility" OFF)
+mark_as_advanced(WITH_OPENVDB_4_ABI_COMPATIBLE)
 option(WITH_OPENVDB_7_ABI_COMPATIBLE "Assume OpenVDB library has been compiled with version 7 ABI compatibility" OFF)
 mark_as_advanced(WITH_OPENVDB_7_ABI_COMPATIBLE)
 option(WITH_NANOVDB       "Enable usage of NanoVDB data structure for rendering on the GPU" ON)
@@ -1234,6 +1236,12 @@ if(WITH_OPENVDB)
 
   if(WITH_OPENVDB_3_ABI_COMPATIBLE)
     list(APPEND OPENVDB_DEFINITIONS -DOPENVDB_3_ABI_COMPATIBLE)
+  endif()
+  if(WITH_OPENVDB_4_ABI_COMPATIBLE)
+    list(APPEND OPENVDB_DEFINITIONS -DOPENVDB_4_ABI_COMPATIBLE)
+  endif()
+  if(WITH_OPENVDB_7_ABI_COMPATIBLE)
+    list(APPEND OPENVDB_DEFINITIONS -DOPENVDB_7_ABI_COMPATIBLE)
   endif()
 
   # OpenVDB headers use deprecated TBB headers, silence warning.
