move bmo_beautify.c

--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -14,7 +14,7 @@ set(INC_SYS
 
 set(SRC
   # Naming convention for BMesh operators is: bmo_*action*_*details*.c
-  operators/bmo_beautify.c
+  operators/bmo_beautify.cc
   operators/bmo_bevel.c
   operators/bmo_bisect_plane.c
   operators/bmo_bridge.c
