move bmo_bisect_plane.c

--- a/source/blender/bmesh/CMakeLists.txt
+++ b/source/blender/bmesh/CMakeLists.txt
@@ -16,7 +16,7 @@ set(SRC
   # Naming convention for BMesh operators is: bmo_*action*_*details*.c
   operators/bmo_beautify.cc
   operators/bmo_bevel.cc
-  operators/bmo_bisect_plane.c
+  operators/bmo_bisect_plane.cc
   operators/bmo_bridge.c
   operators/bmo_connect.c
   operators/bmo_connect_concave.c
